[package]
name = "airnope"
version = "0.0.1"
edition = "2021"

[dependencies]
acap = "0.4.0"
actix-web = "4.10.2"
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.7"
futures = "0.3.31"
log = "0.4.26"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.9.0"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["gzip", "json", "rustls-tls"] }
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "fs", "rt"] }
walkdir = "2.5.0"

[profile.release]
lto = true
