[package]
name = "airnope"
version = "0.0.1"
edition = "2021"

[dependencies]
acap = "0.4.0"
actix-web = "4.11.0"
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
env_logger = "0.11.8"
futures = "0.3.31"
log = "0.4.27"
moka = { version = "0.12.10", features = ["future"] }
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["gzip", "json", "rustls-tls"] }
rust-bert = { version = "0.22.0", features = ["download-libtorch"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.47.0", features = ["rt-multi-thread", "macros", "fs", "rt"] }
walkdir = "2.5.0"

[profile.release]
lto = true

[dev-dependencies]
md5 = "0.8.0"
